test/fail/Issue477.agda

module Issue477 where

data D where
  c : D